--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rimraf": "^2.5.2",
     "run-sequence": "^1.1.5"
   },
+  "directories": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
